use https://github.com/joomla/coding-standards.git

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ services:
 before_script:
   # Make sure all dev dependencies are installed
   - composer install
-  - git clone -b phpcs-2 https://github.com/photodude/coding-standards.git $TRAVIS_PHP_VERSION/PHP/CodeSniffer/Standards/
+  - git clone -b master https://github.com/joomla/coding-standards.git $TRAVIS_PHP_VERSION/PHP/CodeSniffer/Standards/
   - git clone -b master git://github.com/squizlabs/PHP_CodeSniffer.git
   #- composer global require "squizlabs/php_codesniffer=*"
   - mv $TRAVIS_PHP_VERSION/PHP/CodeSniffer/Standards/Joomla PHP_CodeSniffer/CodeSniffer/Standards/
