--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "phpunit/phpunit": "^4.8.35",
         "phpunit/dbunit": "~1.3",
         "friendsofphp/php-cs-fixer": "~1.11",
-        "squizlabs/php_codesniffer": "~1.5",
+        "joomla/coding-standards": "~2.0@alpha",
         "pear/cache_lite": "1.7.16"
     }
 }
