--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: php
 
 env:
   global:
+    - RUN_PHPCS="no"
     - RUN_UNIT_TESTS="yes"
     - INSTALL_MEMCACHE="yes"
     - INSTALL_MEMCACHED="yes"
@@ -28,7 +29,7 @@ matrix:
     - php: 5.5
       env: INSTALL_APCU="yes"
     - php: 5.6
-      env: INSTALL_APCU="yes"
+      env: RUN_PHPCS="yes" INSTALL_APCU="yes"
     - php: 7.2
       env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
     - php: nightly
@@ -48,6 +49,17 @@ before_script:
 
 script:
   - if [[ $RUN_UNIT_TESTS == "yes" ]]; then libraries/vendor/bin/phpunit --configuration travisci-phpunit.xml; fi
+  # list all files in the directory to hunt file missing errors
+  #- ls -alR $(pear config-get php_dir)
+#  - if [[ $RUN_PHPCS == "yes" ]]; then cd PHP_CodeSniffer; fi
+#  - if [[ $RUN_PHPCS == "yes" ]]; then php scripts/phpcs --config-set installed_paths /path/to/Joomla-CMS
+  - if [[ $RUN_PHPCS == "yes" ]]; then php scripts/phpcs -i; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then php scripts/phpcs --version; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then php scripts/phpcs --config-set show_progress 1; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then php scripts/phpcs --config-set report_width 150; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then php scripts/phpcs --config-set encoding utf-8; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then php scripts/phpcs --report=full --colors -ps --standard=Joomla --ignore=*/PHP_CodeSniffer/*,*/vendor/*,*/libraries/*,*/editors/*,*/lib/*,*/templates/*,*/tmpl/*,*/layouts/* $TRAVIS_BUILD_DIR; fi
+
 
 branches:
   except:
