--- a/.travis.yml
+++ b/.travis.yml
@@ -14,29 +14,29 @@ env:
 matrix:
   fast_finish: true
   include:
-    - php: 7.0
-      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
-    - php: 7.1
-      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
+#    - php: 7.0
+#      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
+#    - php: 7.1
+#      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
     # Requires older Precise image
-    - php: 5.3
-      env: INSTALL_APC="yes"
-      sudo: true
-      dist: precise
+#    - php: 5.3
+#      env: INSTALL_APC="yes"
+#      sudo: true
+#      dist: precise
     # The new Trusty image has issues with running APC, do not enable it here
-    - php: 5.4
-      env: INSTALL_APC="no"
-    - php: 5.5
-      env: INSTALL_APCU="yes"
+#    - php: 5.4
+#      env: INSTALL_APC="no"
+#    - php: 5.5
+#      env: INSTALL_APCU="yes"
     - php: 5.6
       env: RUN_PHPCS="yes" INSTALL_APCU="yes"
-    - php: 7.2
-      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
-    - php: nightly
-      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
-  allow_failures:
-    - php: 7.2
-    - php: nightly
+#    - php: 7.2
+#      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
+#    - php: nightly
+#      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
+#  allow_failures:
+#    - php: 7.2
+#    - php: nightly
 
 services:
   - memcache
@@ -48,7 +48,7 @@ before_script:
   - if [[ $RUN_UNIT_TESTS == "yes" ]]; then bash build/travis/unit-tests.sh $PWD; fi
 
 script:
-  - if [[ $RUN_UNIT_TESTS == "yes" ]]; then libraries/vendor/bin/phpunit --configuration travisci-phpunit.xml; fi
+#  - if [[ $RUN_UNIT_TESTS == "yes" ]]; then libraries/vendor/bin/phpunit --configuration travisci-phpunit.xml; fi
   # list all files in the directory to hunt file missing errors
   #- ls -alR $(pear config-get php_dir)
 #  - if [[ $RUN_PHPCS == "yes" ]]; then cd PHP_CodeSniffer; fi
