--- a/.travis.yml
+++ b/.travis.yml
@@ -52,13 +52,13 @@ script:
   # list all files in the directory to hunt file missing errors
   #- ls -alR $(pear config-get php_dir)
 #  - if [[ $RUN_PHPCS == "yes" ]]; then cd PHP_CodeSniffer; fi
-#  - if [[ $RUN_PHPCS == "yes" ]]; then php phpcs --config-set installed_paths /path/to/Joomla-CMS
-  - if [[ $RUN_PHPCS == "yes" ]]; then php phpcs -i; fi
-  - if [[ $RUN_PHPCS == "yes" ]]; then php phpcs --version; fi
-  - if [[ $RUN_PHPCS == "yes" ]]; then php phpcs --config-set show_progress 1; fi
-  - if [[ $RUN_PHPCS == "yes" ]]; then php phpcs --config-set report_width 150; fi
-  - if [[ $RUN_PHPCS == "yes" ]]; then php phpcs --config-set encoding utf-8; fi
-  - if [[ $RUN_PHPCS == "yes" ]]; then php phpcs --report=full --colors -ps --standard=Joomla --ignore=*/PHP_CodeSniffer/*,*/vendor/*,*/libraries/*,*/editors/*,*/lib/*,*/templates/*,*/tmpl/*,*/layouts/* $TRAVIS_BUILD_DIR; fi
+#  - if [[ $RUN_PHPCS == "yes" ]]; then phpcs --config-set installed_paths /path/to/Joomla-CMS
+  - if [[ $RUN_PHPCS == "yes" ]]; then phpcs -i; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then phpcs --version; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then phpcs --config-set show_progress 1; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then phpcs --config-set report_width 150; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then phpcs --config-set encoding utf-8; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then phpcs --report=full --colors -ps --standard=Joomla --ignore=*/PHP_CodeSniffer/*,*/vendor/*,*/libraries/*,*/editors/*,*/lib/*,*/templates/*,*/tmpl/*,*/layouts/* $TRAVIS_BUILD_DIR; fi
 
 
 branches:
