--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ script:
   - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs -i; fi
   - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs --version; fi
   echo $TRAVIS_BUILD_DIR
-  - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs --report=full --colors -vsp --standard=Joomla-CMS .; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs --report=full --colors -vvsp --standard=Joomla-CMS .; fi
 
 
 branches:
