--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ script:
   - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs --config-set installed_paths libraries/vendor/joomla/coding-standards,build/phpcs/; fi
   - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs -i; fi
   - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs --version; fi
-  - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs -v --standard=JoomlaCMS --extensions=php $TRAVIS_BUILD_DIR; fi
+  - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs -vv --standard=JoomlaCMS --extensions=php $TRAVIS_BUILD_DIR; fi
 
 
 branches:
